--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /build
 /dist
 /out
-
+/lib/*
 
 *.o
 *.obj
@@ -15,6 +15,13 @@
 *.log
 *.tmp
 
+# Production environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Static files
 *.log
 *.lock
@@ -22,7 +29,7 @@
 # Editor directories and files
 .vscode/
 .gradle/
-
+gradle/
 # Miscellaneous
 *.zip
 *.tar.gz
