--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation files('lib/javafx-sdk-17/lib/javafx.controls.jar')
     implementation files('lib/javafx-sdk-17/lib/javafx.web.jar')
     implementation files('lib/javafx-sdk-17/lib/javafx.base.jar')
-
+    implementation files('lib/javafx-sdk-17/lib/javafx.fxml.jar')
     implementation files('lib/javafx-sdk-17/lib/javafx.graphics.jar')
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
